src/container/k8s/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: todo-app
  labels:
    app: postgresql
    service: postgresql
spec:
  ports:
    - port: 5432
      name: tcp
  selector:
    app: postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: todo-app
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: registry.access.redhat.com/rhel8/postgresql-16:1-21
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: [ "ALL" ]
            seccompProfile:
              type: RuntimeDefault
